tests/snapshots/gateway/studio/graph_neighbors_index_page_links_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "center": {
    "distance": 0,
    "id": "kernel/docs/index.md",
    "isCenter": true,
    "label": "Documentation Index",
    "nodeType": "doc",
    "path": "kernel/docs/index.md"
  },
  "links": [
    {
      "direction": "outgoing",
      "distance": 1,
      "source": "kernel/docs/index.md",
      "target": "kernel/docs/testing/README.md"
    },
    {
      "direction": "outgoing",
      "distance": 1,
      "source": "kernel/docs/index.md",
      "target": "kernel/docs/testing/skills-tools-benchmark-ci.md"
    }
  ],
  "nodes": [
    {
      "distance": 0,
      "id": "kernel/docs/index.md",
      "isCenter": true,
      "label": "Documentation Index",
      "nodeType": "doc",
      "path": "kernel/docs/index.md"
    },
    {
      "distance": 1,
      "id": "kernel/docs/testing/README.md",
      "isCenter": false,
      "label": "Testing Documentation",
      "nodeType": "doc",
      "path": "kernel/docs/testing/README.md"
    },
    {
      "distance": 1,
      "id": "kernel/docs/testing/skills-tools-benchmark-ci.md",
      "isCenter": false,
      "label": "Skills Tools Benchmark CI Gate",
      "nodeType": "doc",
      "path": "kernel/docs/testing/skills-tools-benchmark-ci.md"
    }
  ],
  "totalLinks": 2,
  "totalNodes": 3
}
