tests/snapshots/gateway/studio/graph_node_neighbors.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "incoming": [],
  "name": "Alpha",
  "nodeId": "kernel/alpha.md",
  "nodeType": "doc",
  "outgoing": [
    "kernel/beta.md"
  ],
  "twoHop": [
    "kernel/gamma.md"
  ]
}
