tests/snapshots/gateway/studio/repo_analysis_import_search_payload.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
assertion_line: 9
expression: value
---
{
  "repo_id": "sciml/imports",
  "imports": []
}
